fixes css bleed

--- a/src/yo-recuerdo/css/index.css
+++ b/src/yo-recuerdo/css/index.css
@@ -2,8 +2,9 @@ body {
   overflow-x: hidden;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-.container {
-  width: 750;
+.yo-container {
+  flex: 1;
+  max-width: 900px;
   background-color: #eef0ff;
   display: flex;
   margin-top: 40px;
@@ -18,37 +19,34 @@ h1 {
   margin: 0;
   padding: 0;
 }
-.app-title {
+.yo-app-title {
   flex: 4;
   flex-direction: column;
   align-items: flex-start;
   margin-left: 30px;
 }
-.app-icon {
+.yo-app-icon {
   flex: 1;
   justify-content: flex-end;
   margin-right: 30px;
 }
-.app-icon img {
+.yo-app-icon img {
   border-radius: 10px
 }
-.header {
-  align-self: stretch;
-  align-items: flex-start;
-  margin-top: 20px;
-}
-div {
+.yo-container div {
   display: flex;
   align-items: center;
 }
-.image-holder {
+.yo-image-holder {
   align-self: stretch;
   flex-wrap: wrap;
   justify-content: space-around;
 }
-.image-holder div {
+.yo-image-holder div {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-p {
+body {
+  display: flex;
+  justify-content: center;
 }
